# dlt-daemon

./: CMakeLists.txt  README.md  ReleaseNotes.md
doc/: dlt_design_specification.md  dlt_for_developers.md
include/dlt/: dlt_client.h  dlt_common.h  dlt_common_api.h  dlt_cpp_extension.hpp  dlt_filetransfer.h  dlt_log.h  dlt_multiple_files.h  dlt_offline_trace.h  dlt_shm.h  dlt_user.h.in  dlt_user_macros.h
src/console/: dlt-control-common.h  dlt-control.c
src/daemon/: dlt-daemon.c  dlt_daemon_client.h  dlt_daemon_common.h  dlt_daemon_offline_logstorage.c  dlt_daemon_offline_logstorage.h
src/lib/: dlt_user.c
src/shared/: dlt_user_shared.h
src/tests/: dlt-test-stress-user.c  dlt-test-user.c
